--- a/14_Numpy_Advanced.ipynb
+++ b/14_Numpy_Advanced.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOF8rQHnl/+7RZPImmgDk1C",
+      "authorship_tag": "ABX9TyNMI54SaMAGaW0okq45dPxm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -158,6 +158,34 @@
           },
           "metadata": {},
           "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#boolean mask\n",
+        "#arko ma number halni\n",
+        "a[a>50]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M-ViItInvcLS",
+        "outputId": "497eab4b-2da8-491b-9d7d-909eb098da4c"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([79, 69, 90, 64, 64, 81, 82])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
         }
       ]
     }
