--- a/14_Numpy_Advanced.ipynb
+++ b/14_Numpy_Advanced.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNMI54SaMAGaW0okq45dPxm",
+      "authorship_tag": "ABX9TyPYvEcuXNBZynL9k99yE5sd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -186,6 +186,96 @@
           },
           "metadata": {},
           "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#even number\n",
+        "a%2 ==0"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DEm_rHE3vuhv",
+        "outputId": "e970d90e-447d-4ac3-c559-28e1b4c0ca7b"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[False, False, False, False],\n",
+              "       [ True, False, False, False],\n",
+              "       [False, False,  True, False],\n",
+              "       [ True,  True,  True,  True],\n",
+              "       [ True, False,  True,  True],\n",
+              "       [False, False,  True,  True]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a[a > 50]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SwQ88xcDv0ub",
+        "outputId": "ade74bf6-7576-4b2b-c7ba-e43d4e80bae2"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([79, 69, 90, 64, 64, 81, 82])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#greater than 50 and even number\n",
+        "(a>50) & (a%2 == 0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k3U0d3Z6v6nr",
+        "outputId": "b9d6815e-e9ba-446f-cdea-5d19e0a6bec7"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[False, False, False, False],\n",
+              "       [False, False, False, False],\n",
+              "       [False, False,  True, False],\n",
+              "       [False, False,  True, False],\n",
+              "       [False, False, False,  True],\n",
+              "       [False, False,  True, False]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
         }
       ]
     }
