--- a/14_Numpy_Advanced.ipynb
+++ b/14_Numpy_Advanced.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYvEcuXNBZynL9k99yE5sd",
+      "authorship_tag": "ABX9TyMkZbbBeONgdoEczIEOOBtl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -276,6 +276,33 @@
           },
           "metadata": {},
           "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#not divisible by 7\n",
+        "a[a%7 == 0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IP0VNH3FwTXG",
+        "outputId": "9a72e1f7-0152-46e9-a3f5-b2d34c608edf"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([49, 21])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
         }
       ]
     }
