--- a/14_Numpy_Advanced.ipynb
+++ b/14_Numpy_Advanced.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMkZbbBeONgdoEczIEOOBtl",
+      "authorship_tag": "ABX9TyP5TTBrDJm/i1+tUCVk5ETt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
       "outputs": [],
       "source": [
         "# Numpy vs Array List\n",
-        "#numpy is 50 timesfaster than python list\n",
+        "#numpy is 50 timesfaster than python list//\n",
         "\n"
       ]
     },
@@ -67,7 +67,7 @@
         "id": "SKYthHR_ccZA",
         "outputId": "7e3baae8-03f9-4da1-990b-f4338e90fb96"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -110,7 +110,7 @@
         "id": "HP-K5jlUpxgO",
         "outputId": "588a91fd-19dc-423b-dfea-554d844fb0af"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -142,7 +142,7 @@
         "id": "coHJU0JtvUiN",
         "outputId": "4bcccfa6-f0ed-4f28-9022-e3460550c923"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -175,7 +175,7 @@
         "id": "M-ViItInvcLS",
         "outputId": "497eab4b-2da8-491b-9d7d-909eb098da4c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -202,7 +202,7 @@
         "id": "DEm_rHE3vuhv",
         "outputId": "e970d90e-447d-4ac3-c559-28e1b4c0ca7b"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -233,7 +233,7 @@
         "id": "SwQ88xcDv0ub",
         "outputId": "ade74bf6-7576-4b2b-c7ba-e43d4e80bae2"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -260,7 +260,7 @@
         "id": "k3U0d3Z6v6nr",
         "outputId": "b9d6815e-e9ba-446f-cdea-5d19e0a6bec7"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -286,13 +286,13 @@
         "a[a%7 == 0]"
       ],
       "metadata": {
+        "id": "IP0VNH3FwTXG",
+        "outputId": "9a72e1f7-0152-46e9-a3f5-b2d34c608edf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "IP0VNH3FwTXG",
-        "outputId": "9a72e1f7-0152-46e9-a3f5-b2d34c608edf"
+        }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
