--- a/14_Numpy_Advanced.ipynb
+++ b/14_Numpy_Advanced.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5TTBrDJm/i1+tUCVk5ETt",
+      "authorship_tag": "ABX9TyNVAO75lkmAuKgQDHjvBKPG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
       "outputs": [],
       "source": [
         "# Numpy vs Array List\n",
-        "#numpy is 50 timesfaster than python list//\n",
+        "#numpy is 50 timesfaster than python list/\n",
         "\n"
       ]
     },
