--- a/14_Numpy_Advanced.ipynb
+++ b/14_Numpy_Advanced.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhUpJr6obzZrod1WZcXq/F",
+      "authorship_tag": "ABX9TyPpU4Xgflp6mt45H//45Iv0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +83,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#fancy indecxing\n"
+        "#fancy indexing\n"
       ],
       "metadata": {
         "id": "UOCzl73YpsC4"
