--- a/14_Numpy_Advanced.ipynb
+++ b/14_Numpy_Advanced.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNmaBp05EJOr7Fopta8usi9",
+      "authorship_tag": "ABX9TyPn6idTj+1cw+B42PAwdab8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -303,6 +303,16 @@
           "execution_count": 11
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Broadcasting**\n",
+        "The term broadcasting describes how Numpy treats array with different shapes, during arithematic operations. The smaller array is \"broadcast\" across the larger arrary so that have compatible."
+      ],
+      "metadata": {
+        "id": "xYvnVcdWRHW1"
+      }
     }
   ]
 }
