--- a/14_Numpy_Advanced.ipynb
+++ b/14_Numpy_Advanced.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPn6idTj+1cw+B42PAwdab8",
+      "authorship_tag": "ABX9TyNpXgo3lhLZDJKGODuLYaL/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -313,6 +313,134 @@
       "metadata": {
         "id": "xYvnVcdWRHW1"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#same shape\n",
+        "a = np.arange(6).reshape(2,3)\n",
+        "b = np.arange(6, 12).reshape(2,3)\n",
+        "\n",
+        "print(a)\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7Eg-GAPoR-i7",
+        "outputId": "60f51bdd-7a35-4028-9ab9-966b18d6c6f7"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2]\n",
+            " [3 4 5]]\n",
+            "[[ 6  7  8]\n",
+            " [ 9 10 11]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = np.arange(6).reshape(2,3)\n",
+        "b = np.arange(6, 12).reshape(2,3)\n",
+        "\n",
+        "print(a)\n",
+        "print(b)\n",
+        "\n",
+        "print(a+b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tbGQnB29SNo9",
+        "outputId": "8749248c-ea33-4b8e-f55a-a27e92c7d6ef"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2]\n",
+            " [3 4 5]]\n",
+            "[[ 6  7  8]\n",
+            " [ 9 10 11]]\n",
+            "[[ 6  8 10]\n",
+            " [12 14 16]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#different shapes\n",
+        "a = np.arange(6).reshape(2,3)\n",
+        "b = np.arange(3).reshape(1,3)\n",
+        "\n",
+        "print(a)\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eiexI1h5STF3",
+        "outputId": "7a2752d2-1035-4a6f-e980-c536f8ca2126"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2]\n",
+            " [3 4 5]]\n",
+            "[[0 1 2]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = np.arange(6).reshape(2,3)\n",
+        "b = np.arange(3).reshape(1,3)\n",
+        "\n",
+        "print(a)\n",
+        "print(b)\n",
+        "\n",
+        "print(a+b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2LKjXHexSq82",
+        "outputId": "c9f2e148-7e18-4f9c-ba03-75188075df18"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2]\n",
+            " [3 4 5]]\n",
+            "[[0 1 2]]\n",
+            "[[0 2 4]\n",
+            " [3 5 7]]\n"
+          ]
+        }
+      ]
     }
   ]
 }
