--- a/14_Numpy_Advanced.ipynb
+++ b/14_Numpy_Advanced.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNpXgo3lhLZDJKGODuLYaL/",
+      "authorship_tag": "ABX9TyPT4HecbRCta8G0sQ53z9Ln",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -441,6 +441,31 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Broadcasting Rules:\n",
+        "1. Make the 2 arrays have the same numbers of dimensions\n",
+        "----> If the no.of dimensions of the two arrays are diffferent add new dimensions with size 1 to  the head of the array with the smallar dimension.\n",
+        "eg: (2,4)\n",
+        "(2,)\n",
+        "make it to\n",
+        "(2,4)\n",
+        "and (1,2)"
+      ],
+      "metadata": {
+        "id": "wAWDXn-vT9xb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "che4NzXXT204"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
