--- a/14_Numpy_Advanced.ipynb
+++ b/14_Numpy_Advanced.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPT4HecbRCta8G0sQ53z9Ln",
+      "authorship_tag": "ABX9TyPynqDBqCt8W+4JY5RPu9qh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       "metadata": {
         "id": "wbbta7A8cxkb"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -46,8 +46,7 @@
       "outputs": [],
       "source": [
         "# Numpy vs Array List\n",
-        "#numpy is 50 timesfaster than python list/\n",
-        "#\n"
+        "#numpy is 50 timesfaster than python list\n"
       ]
     },
     {
@@ -65,7 +64,7 @@
         "id": "SKYthHR_ccZA",
         "outputId": "c8bf5d3c-8231-4230-dd71-9a416035c0a3"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -96,9 +95,7 @@
       "source": [
         "#boolean indexing\n",
         "import numpy as np\n",
-        "\n",
         "a = np.random.randint(1,100,24).reshape(6,4)\n",
-        "\n",
         "a"
       ],
       "metadata": {
@@ -108,7 +105,7 @@
         "id": "HP-K5jlUpxgO",
         "outputId": "f3dad824-9c57-440a-e51f-2696c30b61c6"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -331,7 +328,7 @@
         "id": "7Eg-GAPoR-i7",
         "outputId": "60f51bdd-7a35-4028-9ab9-966b18d6c6f7"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -363,7 +360,7 @@
         "id": "tbGQnB29SNo9",
         "outputId": "8749248c-ea33-4b8e-f55a-a27e92c7d6ef"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -396,7 +393,7 @@
         "id": "eiexI1h5STF3",
         "outputId": "7a2752d2-1035-4a6f-e980-c536f8ca2126"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -427,7 +424,7 @@
         "id": "2LKjXHexSq82",
         "outputId": "c9f2e148-7e18-4f9c-ba03-75188075df18"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
